<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.niu.cs.akhil.quadraticcalculator.MainActivity"
    android:background="@color/colorPrimary">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header1"
        android:text="@string/header_value1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header2"
        android:layout_below="@+id/header1"
        android:layout_alignParentStart="true"
        android:text="@string/header_value2"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/header3"
        android:layout_below="@+id/header2"
        android:layout_alignParentStart="true"
        android:text="@string/header_value3"
        android:textAlignment="center"/>

    <TextView
        android:text="@string/valuea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ca"
        android:layout_below="@+id/header3"
        android:layout_alignEnd="@+id/cb"
        android:layout_marginTop="58dp"/>

    <TextView
        android:text="@string/valueb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cb"
        android:layout_below="@+id/ca"
        android:layout_alignEnd="@+id/cc"
        android:layout_marginTop="40dp"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:layout_alignBottom="@+id/ca"
        android:layout_alignStart="@+id/solve"
        android:layout_marginStart="14dp"
        android:id="@+id/coefficientA"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:layout_below="@+id/coefficientA"
        android:layout_alignStart="@+id/coefficientA"
        android:layout_marginTop="22dp"
        android:id="@+id/coefficientB"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned"
        android:ems="10"
        android:layout_below="@+id/coefficientB"
        android:layout_alignStart="@+id/coefficientB"
        android:layout_marginTop="15dp"
        android:id="@+id/coefficientC"/>

    <TextView
        android:text="@string/valuec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/cc"
        android:layout_alignBaseline="@+id/coefficientC"
        android:layout_alignBottom="@+id/coefficientC"
        android:layout_alignStart="@+id/x1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/x1"
        android:hint="@string/sol1"
        android:layout_below="@+id/coefficientC"
        android:layout_alignStart="@+id/solution"
        android:layout_marginTop="21dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/x2"
        android:hint="@string/sol2"
        android:layout_alignBaseline="@+id/x1"
        android:layout_alignBottom="@+id/x1"
        android:layout_alignEnd="@+id/solution"/>

    <TextView
        android:text="@string/solution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/solution"
        android:textStyle="normal|bold"
        android:layout_below="@+id/x1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"/>

    <Button
        android:text="@string/solve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/solve"
        android:background="@android:drawable/alert_light_frame"
        android:layout_below="@+id/solution"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>
</RelativeLayout>
